add start lesson2-hw1

--- a/dz/package.json
+++ b/dz/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "axios": "^1.6.7"
   },
   "devDependencies": {
     "@rsbuild/core": "^0.3.11",
